# MusiCLI

./: .gitignore  AGENTS.md  API.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  ci.yml
.kagent/: events.ndjson  symbols.json
.superpowers/sdd/: task-2.7-report.md  task-2.8-report.md
docs/superpowers/plans/: 2026-06-27-code-quality-overhaul.md
docs/superpowers/specs/: 2026-06-27-code-quality-overhaul-design.md
electron/: main.js  preload.js
scripts/: dev.mjs
src/: App.tsx  configStore.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: index.html  musicli.js
src-tauri/src/: commands.rs  config_cmd.rs  fs_cmd.rs  lib.rs  lrc_cmd.rs  lrc_parser.rs  lyrics_cmd.rs  main.rs  metadata_cmd.rs  server_state.rs  zip_cmd.rs
src-tauri/src/audio/: decoder.rs  engine.rs  mod.rs  output.rs  resampler.rs
src-tauri/src/core/: files.rs  lyrics.rs  metadata.rs  mod.rs  playlist.rs
src-tauri/src/server/: http.rs  live.rs  mod.rs  repl.rs
src/bridge/: http.ts  hybrid.ts  index.ts  tauri.ts
src/commands/: completions.ts  handlers.ts  helpLayout.ts  registry.ts
src/commands/handlers/: appearance.ts  index.ts  lyrics.ts  playback.ts  playlist.ts  sync.ts  system.ts
src/components/: BackgroundLayer.tsx  FloatingLyrics.tsx  InputLine.tsx  NowPlaying.tsx  SafeHtml.tsx  SelectList.tsx  Terminal.tsx  TitleBar.tsx
src/constants/: themes.ts
src/contexts/: PlayerContext.tsx  PlaylistContext.tsx  SettingsContext.tsx  TerminalContext.tsx
src/i18n/: index.ts  translations.ts
src/types/: electron.d.ts  index.ts
src/utils/: color.ts  css.ts  format.ts  fuzzy.ts  guards.ts  lrc.ts  waitFor.ts
src/utils/__tests__/: format.test.ts  fuzzy.test.ts  guards.test.ts  lrc.test.ts
