[package]
name = "musicli"
version = "3.2.0"
edition = "2021"

[features]
default = []
asio = ["cpal/asio"]
gui = ["tauri", "tauri-plugin-dialog"]
server = ["rustyline"]

[lib]
name = "musicli_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "musicli"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio metadata
lofty = "0.21"

# Audio decoding
symphonia = { version = "0.6", features = [
    "mp3",
    "aac",
    "isomp4",
    "alac",
    "flac",
    "vorbis",
    "pcm",
    "wav",
] }

# Audio output (WASAPI default + ASIO optional)
cpal = "0.18"

# Lock-free ring buffer
rb = "0.4"

# Sample rate conversion
rubato = "0.16"

# ZIP
zip = "2"

# Utilities
walkdir = "2"
base64 = "0.22"
dirs = "5"
regex = "1"
chrono = "0.4"

# Headless / server mode
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
rustyline = { version = "15", optional = true }
clap = { version = "4", features = ["derive"] }
