[package]
name = "musicli"
version = "3.4.0"
edition = "2021"

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-plugin-dialog"]
asio = ["cpal/asio"]

[lib]
name = "musicli_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "musicli"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio metadata
lofty = "0.21"

# Audio decoding
symphonia = { version = "0.6", features = [
    "mp3",
    "aac",
    "isomp4",
    "alac",
    "flac",
    "vorbis",
    "pcm",
    "wav",
] }

# Audio output (WASAPI default + ASIO optional)
cpal = "0.18"

# Lock-free ring buffer
rb = "0.4"

# Sample rate conversion
rubato = "0.16"

# ZIP
zip = "2"

# Utilities
walkdir = "2"
base64 = "0.22"
dirs = "5"
regex = "1"
chrono = "0.4"

# Headless / server mode
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
